--- a/software/examples/examples/4_gui_examples/SConstruct
+++ b/software/examples/examples/4_gui_examples/SConstruct
@@ -2,11 +2,10 @@ import os
 import sys
 import rtconfig
 
-# if os.getenv('RTT_ROOT'):
-    # RTT_ROOT = os.getenv('RTT_ROOT')
-# else:
-    # RTT_ROOT = os.path.join(Dir('#').get_abspath(), 'rt-thread')
-RTT_ROOT = 'E:/rt-thread/rt-thread-svn/tags/rtt_1_0_1'
+if os.getenv('RTT_ROOT'):
+	RTT_ROOT = os.getenv('RTT_ROOT')
+else:
+	RTT_ROOT = os.path.join(Dir('#').get_abspath(), 'rt-thread')
 
 sys.path = sys.path + [os.path.join(RTT_ROOT, 'tools')]
 from building import *
