--- a/software/realtouch/SConstruct
+++ b/software/realtouch/SConstruct
@@ -22,7 +22,13 @@ Export('RTT_ROOT')
 Export('rtconfig')
 
 # prepare building environment
-objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False)
+RTT_RTGUI = os.getenv('RTT_RTGUI')
+if RTT_RTGUI:
+	# if GUI dir is set to other place, don't use the one in RTT_ROOT
+    objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False, remove_components=['rtgui'])
+    objs += SConscript(os.path.join(RTT_RTGUI, 'SConscript'))
+else:
+    objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False)
 
 # build program 
 env.Program(TARGET, objs)
