--- a/software/examples/examples/4_gui_examples/SConstruct
+++ b/software/examples/examples/4_gui_examples/SConstruct
@@ -27,7 +27,9 @@ RTT_RTGUI = os.getenv('RTT_RTGUI')
 if RTT_RTGUI:
 	# if GUI dir is set to other place, don't use the one in RTT_ROOT
     objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False, remove_components=['rtgui'])
-    objs += SConscript(os.path.join(RTT_RTGUI, 'SConscript'))
+    objs += SConscript(os.path.join(RTT_RTGUI, 'SConscript'),
+                       variant_dir='build/components/rtgui',
+                       duplicate=0)
 else:
     objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False)
 
