--- a/software/examples/examples/1_kernel_thread_dynamic/SConstruct
+++ b/software/examples/examples/1_kernel_thread_dynamic/SConstruct
@@ -25,8 +25,8 @@ Export('rtconfig')
 # prepare building environment
 objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False)
 
-# build program 
-env.Program(TARGET, objs)
+# build program
+program = env.Program(TARGET, objs)
 
-# end building 
-EndBuilding(TARGET)
+# end building
+EndBuilding(TARGET, program)
