remove mp3 when using GCC

--- a/software/realtouch/mp3/SConscript
+++ b/software/realtouch/mp3/SConscript
@@ -10,6 +10,8 @@ if rtconfig.PLATFORM == 'iar':
 	src += ['./real/arm/asmmisc_iar.s', './real/arm/asmpoly_thumb2_iar.s']
 if rtconfig.PLATFORM == 'armcc':
 	src += ['./real/arm/asmmisc.s', './real/arm/asmpoly_thumb2.s']
+if rtconfig.PLATFORM == 'gcc':
+	Return('')
 
 cwd     = GetCurrentDir()
 
