--- a/software/realtouch/applications/SConscript
+++ b/software/realtouch/applications/SConscript
@@ -6,6 +6,9 @@ cwd = GetCurrentDir()
 src	= Glob('*.c')
 CPPPATH = [cwd, str(Dir('#'))]
 
+if rtconfig.PLATFORM == 'gcc':
+	SrcRemove(src, 'mp3.c')
+
 group = DefineGroup('Applications', src, depend = [''], CPPPATH = CPPPATH)
 
 Return('group')
