add nand driver.

--- a/software/examples/drivers/SConscript
+++ b/software/examples/drivers/SConscript
@@ -29,7 +29,11 @@ if GetDepend('RT_USING_SPI') == True:
 	src += ['stm32f20x_40x_spi.c']
 	src += ['spi_flash_w25qxx.c']
 
-# add spi driver.
+# add nand driver.
+if GetDepend('RT_USING_MTD_NAND') == True:
+	src += ['K9F2G08U0B.c']
+
+# add i2c driver.
 if GetDepend('RT_USING_I2C') == True:
 	src += ['stm32_i2c.c']
 	src += ['codec_wm8978_i2c.c']
