--- a/software/examples/STM32F4xx_Libraries/SConscript
+++ b/software/examples/STM32F4xx_Libraries/SConscript
@@ -34,7 +34,7 @@ path = [cwd + '/STM32F4xx_StdPeriph_Driver/inc',
 
 # source files for USB device library
 if GetDepend('RT_USING_USB_DEVICE') == True:
-    usb_src = Split("""
+    src += Split("""
     STM32_USB_Device_Library/Core/src/usbd_ioreq.c
     STM32_USB_OTG_Driver/src/usb_core.c
     STM32_USB_OTG_Driver/src/usb_dcd.c
@@ -48,7 +48,6 @@ usb_path = [cwd + '/STM32_USB_Device_Library/Core/inc',
 
 # add USB related source code 
 path += usb_path
-src += usb_src
 
 CPPDEFINES = ['USE_STDPERIPH_DRIVER']
 group = DefineGroup('STM32_StdPeriph', src, depend = [''], CPPPATH = path, CPPDEFINES = CPPDEFINES)
