--- a/software/realtouch/mp3/SConscript
+++ b/software/realtouch/mp3/SConscript
@@ -7,16 +7,14 @@ src += Glob('./real/*.c')
 
 SrcRemove(src, 'polyphase.c')
 if rtconfig.PLATFORM == 'iar':
-	src += ['./real/arm/asmmisc_iar.s', './real/arm/asmpoly_thumb2_iar.s']
+    src += ['./real/arm/asmmisc_iar.s', './real/arm/asmpoly_thumb2_iar.s']
 if rtconfig.PLATFORM == 'armcc':
-	src += ['./real/arm/asmmisc.s', './real/arm/asmpoly_thumb2.s']
+    src += ['./real/arm/asmmisc_rvds.s', './real/arm/asmpoly_thumb2_rvds.s']
 if rtconfig.PLATFORM == 'gcc':
-	Return('')
+    src += ['./real/arm/asmmisc_gcc.s', './real/arm/asmpoly_thumb2_gcc.s']
 
-cwd     = GetCurrentDir()
-
+cwd = GetCurrentDir()
 CPPPATH = [cwd + '/pub']
-
 
 group = DefineGroup('mp3', src, depend = [''], CPPPATH = CPPPATH)
 
