add user manual latex file.

--- a/software/examples/examples/5_media_mp3/mp3/SConscript
+++ b/software/examples/examples/5_media_mp3/mp3/SConscript
@@ -2,27 +2,19 @@ Import('RTT_ROOT')
 Import('rtconfig')
 from building import *
 
-cwd = os.path.join(str(Dir('#')), 'mp3')
-CPPPATH = [cwd, str(Dir('#')), cwd + '/pub', cwd + '/real']
+src = Glob('*.c')
+src += Glob('./real/*.c')
 
-src = Split("""
-mp3dec.c
-mp3tabs.c
-real/bitstream.c
-real/buffers.c
-real/dct32.c
-real/dequant.c
-real/dqchan.c
-real/huffman.c
-real/hufftabs.c
-real/imdct.c
-real/scalfact.c
-real/stproc.c
-real/subband.c
-real/trigtabs.c
-real/arm/asmpoly_thumb2.s
-real/arm/asmmisc.s
-""")
+SrcRemove(src, 'polyphase.c')
+if rtconfig.PLATFORM == 'iar':
+    src += ['./real/arm/asmmisc_iar.s', './real/arm/asmpoly_thumb2_iar.s']
+if rtconfig.PLATFORM == 'armcc':
+    src += ['./real/arm/asmmisc_rvds.s', './real/arm/asmpoly_thumb2_rvds.s']
+if rtconfig.PLATFORM == 'gcc':
+    src += ['./real/arm/asmmisc_gcc.s', './real/arm/asmpoly_thumb2_gcc.s']
+
+cwd = GetCurrentDir()
+CPPPATH = [cwd + '/pub']
 
 group = DefineGroup('mp3', src, depend = [''], CPPPATH = CPPPATH)
 
