scons: fix armcc link errors without patching scons/__init_.py

--- a/software/realtouch/SConstruct
+++ b/software/realtouch/SConstruct
@@ -18,11 +18,20 @@ env = Environment(tools = ['mingw'],
 	AR = rtconfig.AR, ARFLAGS = '-rc',
 	LINK = rtconfig.LINK, LINKFLAGS = rtconfig.LFLAGS)
 
+def mdk_create_tmpfile(tmpfile, objs):
+    cmdline =''
+    tmpfile = file(tmpfile, 'w')
+    for item in objs:
+        # print type(item), os.path.basename(str(item))
+        cmdline += os.path.normpath(str(item))
+        cmdline += ' '
+
+    tmpfile.write(cmdline)
+    tmpfile.close();
+    return
+
 if rtconfig.PLATFORM == 'armcc':
-    env["TEMPFILE"] = SCons.Platform.TempFileMunge
-    # env["LINKCOM"] = "${TEMPFILE('$LINK -o $TARGET $SOURCES')}"
-    env["LINKCOM"] = "$LINK -o $TARGET $LINKFLAGS ${TEMPFILE('--via $SOURCES')}"
-    env["TEMPFILEPREFIX"] = ' '      # arm tool chain
+    env["LINKCOM"] = "$LINK -o $TARGET $LINKFLAGS --via tmpcmd.txt"
 
 Export('RTT_ROOT')
 Export('rtconfig')
@@ -40,6 +49,9 @@ else:
     objs = PrepareBuilding(env, RTT_ROOT, has_libcpu=False)
 
 # build program
+if rtconfig.PLATFORM == 'armcc':
+	mdk_create_tmpfile('tmpcmd.txt', objs)
+
 program = env.Program(TARGET, objs)
 
 # end building
