4_gui_examples: find the right examples when RTT_RTGUI is set

--- a/software/examples/examples/4_gui_examples/SConscript
+++ b/software/examples/examples/4_gui_examples/SConscript
@@ -8,7 +8,11 @@ list = os.listdir(cwd)
 
 objs += SConscript(cwd + "/../../STM32F4xx_Libraries/SConscript")
 objs += SConscript(cwd + "/../../drivers/SConscript")
-objs += SConscript(os.path.join(RTT_ROOT, 'examples', 'gui', 'SConscript'))
+RTT_RTGUI = os.getenv('RTT_RTGUI')
+if RTT_RTGUI:
+    objs += SConscript(os.path.join(RTT_RTGUI, '..', '..', 'demo', 'examples', 'SConscript'))
+else:
+    objs += SConscript(os.path.join(RTT_ROOT, 'examples', 'gui', 'SConscript'))
 
 for d in list:
     path = os.path.join(cwd, d)
